Remove incompatible library for Java 8. Fix new test code to be compatible with Java 8.